@@ -4433,3 +4433,64 @@ class Estonia(HolidayBase):
 
 class EE(Estonia):
     pass
+
+
+class Iceland(HolidayBase):
+    # https://en.wikipedia.org/wiki/Public_holidays_in_Iceland
+    # https://www.officeholidays.com/countries/iceland/index.php
+    def __init__(self, **kwargs):
+        self.country = "IS"
+        HolidayBase.__init__(self, **kwargs)
+
+    def _populate(self, year):
+        # Public holidays
+        self[date(year, JAN, 1)] = "Nýársdagur"
+        self[easter(year) - rd(days=3)] = "Skírdagur"
+        self[easter(year)] = "Páskadagur"
+        self[easter(year) + rd(days=1)] = "Annar í páskum"
+        self[date(year, APR, 19) + rd(weekday=TH(+1))] = \
+            "Sumardagurinn fyrsti"
+        self[date(year, MAY, 1)] = "Verkalýðsdagurinn"
+        self[easter(year) + rd(days=39)] = "Uppstigningardagur"
+        self[easter(year) + rd(days=49)] = "Hvítasunnudagur"
+        self[easter(year) + rd(days=50)] = "Annar í hvítasunnu"
+        self[date(year, JUN, 17)] = "Þjóðhátíðardagurinn"
+        # First Monday of August
+        self[date(year, AUG, 1) + rd(weekday=MO(+1))] = \
+            "Frídagur verslunarmanna"
+        self[date(year, DEC, 24)] = "Aðfangadagur"
+        self[date(year, DEC, 25)] = "Jóladagur"
+        self[date(year, DEC, 26)] = "Annar í jólum"
+        self[date(year, DEC, 31)] = "Gamlársdagur"
+
+
+class IS(Iceland):
+    pass
+
+
+class Kenya(HolidayBase):
+    # https://en.wikipedia.org/wiki/Public_holidays_in_Kenya
+    # http://kenyaembassyberlin.de/Public-Holidays-in-Kenya.48.0.html
+    def __init__(self, **kwargs):
+        self.country = "KE"
+        HolidayBase.__init__(self, **kwargs)
+
+    def _populate(self, year):
+        # Public holidays
+        self[date(year, JAN, 1)] = "New Year's Day"
+        self[date(year, MAY, 1)] = "Labour Day"
+        self[date(year, JUN, 1)] = "Madaraka Day"
+        self[date(year, OCT, 20)] = "Mashujaa Day"
+        self[date(year, DEC, 12)] = "Jamhuri (Independence) Day"
+        self[date(year, DEC, 25)] = "Christmas Day"
+        self[date(year, DEC, 26)] = "Boxing Day"
+        for k, v in list(self.items()):
+            if self.observed and k.weekday() == SUN:
+                self[k + rd(days=1)] = v + " (Observed)"
+
+        self[easter(year) - rd(weekday=FR(-1))] = "Good Friday"
+        self[easter(year) + rd(weekday=MO(+1))] = "Easter Monday"
+
+
+class KE(Kenya):
+    pass
