@@ -6,6 +6,7 @@ Released ????? ??, ????
 - Added Japanese holidays for new Emperor (kokinamura)
 - Fixed Australian Canberra day holiday (explodingdinosaurs, dr-p)
 - Added support for Estonian holidays (RaulVS14)
+- Added support for Iceland and Kenya (justinasfour04)
 
 Version 0.9.10
 ==============
